          Graph can be source or target in Link instances.
        - Removed Link.identifier and Graph.identifier properties.
        - Series#getFirstValue() now returns the default value if the
          parameter exists but has a null value. 
          Suggested by Jonathan Hall.
        - Added Context#setClientDispatcher() and 
          Context#setServerDispatcher() methods.
     - Misc
        - Upgraded Simple server to version 4.1.2. 
          Contributed by Niall Gallagher.
        - Fixed Javadocs typos in Router and Resource. 
          Contributed by Raif S. Naffah.
        - Fixed issue with parent contexts in ServerServlets. 
          Contributed by Marcelo Ochoa.
        - Updated OAuth library to latest version. 
          Suggested by Sean Sullivan.

- 1.2 Milestone 1 (2009-01-23)
    - Breaking changes
        - The engine has been moved from "com.noelios.restlet" to
          the "org.restlet.engine" package, simplifying the packaging.
        - All engine extensions have been moved to "org.restlet.ext"
          packages.
        - The com.noelios.restlet.ext.spring extension has been merged
          with org.restlet.ext.spring.
        - Moved org.restlet.util.DateUtils, ByteUtils and Engine 
          classes to org.restlet.engine.* packages.
    - Enhancements
        - Internal HTTP connector now supports HTTPS connections.
          Contributed by Kevin Conaway.
        - Added a Lucene extension including a Solr client connector
          contributed by Remi Dewitte. Also contains a useful 
          TikaRepresentation to extract metadata from a representation
          using Lucene Tika parsing and analysis library. Suggested by
          Ben Johnson.
        - The Atom Service class now supports getting documents from
          other protocols than HTTP.
        - Updated org.restlet.Component to support validating parsing. 
          Contributed by Raif S. Naffah.